test/sema/negative/mutual_trait_refs.impala
// these traits are not implementable
trait S[A: T[int]] {}
trait T[B: S[int]] {}

// ...or are they?
impl S[int] for int {}
impl T[int] for int {}
